# fertilizer_recommender

./: .gitignore  README.md  pyproject.toml
artifacts/models/: baseline_logreg_final.joblib
configs/: mlflow.yaml  models.yaml  training.yaml
note/: note_000.md
notebooks/: 00_sanity_check.ipynb  01_load_data_and_validate.ipynb  02_baseline_model.ipynb  03_cv_and_mlflow.ipynb  04_submission_build.ipynb  05_models_catboost_lightgbm_xgboost.ipynb  06_feature_engineering.ipynb  07_ensemble_blending.ipynb  08_run.ipynb
src/fertilizer_recommender/: composition_root.py  composition_root_complete.py
src/fertilizer_recommender/application/use_cases/: build_submission.py  evaluate_model.py  predict_ensemble_topk.py  predict_topk.py  prepare_dataset.py  train_final_model.py  train_model.py  train_with_cv.py
src/fertilizer_recommender/application/use_cases/olds/: train_with_cv_olds.py
src/fertilizer_recommender/domain/entities/: fertilizer_features.py  fertilizer_label.py  recommendation.py
src/fertilizer_recommender/domain/interfaces/: dataset_repository.py  experiment_tracker.py  feature_transformer.py  model_repository.py
src/fertilizer_recommender/domain/services/: ensemble_service.py  experiment_tracking_service.py  metric_service.py  ranking_service.py  validation_service.py
src/fertilizer_recommender/infrastructure/data_sources/: csv_loader.py  local_storage.py  schema_inference.py
src/fertilizer_recommender/infrastructure/ml/cv/: splitter.py
src/fertilizer_recommender/infrastructure/ml/ensemble/: probability_ensemble.py
src/fertilizer_recommender/infrastructure/ml/models/: baseline_logreg.py  catboost_multiclass.py  lightgbm_multiclass.py  xgboost_multiclass.py
src/fertilizer_recommender/infrastructure/ml/pipelines/: inference_pipeline.py  training_pipeline.py
src/fertilizer_recommender/infrastructure/ml/preprocessors/: feature_engineering.py  feature_pipeline.py  sklearn_transformer.py  target_encoder.py
src/fertilizer_recommender/infrastructure/observability/: logger.py  tracing.py
src/fertilizer_recommender/infrastructure/repositories/: dataset_repository_impl.py  model_repository_impl.py
src/fertilizer_recommender/infrastructure/tracking/: mlflow_setup.py  mlflow_tracker.py
src/fertilizer_recommender/infrastructure/tracking/olds/: mlflow_tracker.py
src/fertilizer_recommender/infrastructure/utils/: config_loader.py  seed.py
